Added license information

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,16 @@
 {
     "name": "mlehner/gelf-php",
     "description": "Fork of gelf-php with PHP namespace support",
+    "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Matt Lehner",
             "email": "matt.lehner@tellecore.com"
+        }, {
+            "name": "Lennart Koopmann",
+            "email": "lennart@socketfeed.com",
+            "homepage": "http://www.lennartkoopmann.net/"
         }
     ],
     "require": {},
