--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,15 @@
             "name": "Lennart Koopmann",
             "email": "lennart@socketfeed.com",
             "homepage": "http://www.lennartkoopmann.net/"
+        }, {
+            "name": "Julius Beckmann",
+            "email": "github@h4cc.de"
         }
     ],
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "~3.7"
+    },
     "autoload": {
         "psr-0": {"Gelf": "src/"}
     }
