--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
     },
     "autoload": {
         "psr-0": {"Gelf": "src/"}
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
     }
 }
